# SVM

./: .gitignore  02_svm_kernel_td.ipynb  BEST_MODEL.md  README.md  pyproject.toml  rapport.md  rapport_ecrit_Estelle_MARTINEZ.md  td2_explicabilite.ipynb
data/: README.md
notebooks/: dossier.ipynb  projet_ml_courses_hippiques.ipynb
