[project]
name = "projet-ml-courses-hippiques"
version = "0.1.0"
description = "Projet de classification et d'explicabilite sur des courses hippiques"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=2.2,<3",
  "pandas>=2.2,<3",
  "matplotlib>=3.10,<4",
  "seaborn>=0.13,<0.14",
  "scikit-learn>=1.6,<2",
  "xgboost>=3.0,<4",
  "shap>=0.48,<0.49",
  "alibi>=0.9,<0.10",
  "jupyter>=1.1,<2",
  "ipykernel>=6.29,<7",
  "nbformat>=5.10,<6"
]

[tool.uv]
package = false
