[project]
name = "projet-ml-courses-hippiques"
version = "0.1.0"
description = "Projet de classification et explicabilite sur des courses hippiques"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "numpy>=1.23,<2.0",
    "pandas>=1.5,<2.0",
    "scikit-learn>=1.3,<1.6",
    "matplotlib>=3.7,<4.0",
    "seaborn>=0.13,<0.14",
    "shap>=0.45,<0.48",
    "xgboost>=2.0,<3.0",
    "alibi>=0.9,<1.0",
    "jupyter>=1.0,<2.0",
    "ipykernel>=6.29,<7.0",
]
